src/test/ui/issues/issue-23217.stderr
error[E0599]: no variant named `A` found for type `SomeEnum` in the current scope
  --> $DIR/issue-23217.rs:2:9
   |
LL | pub enum SomeEnum {
   | ----------------- variant `A` not found here
LL |     B = SomeEnum::A,
   |         ^^^^^^^^^^^ variant not found in `SomeEnum`
   |
   = note: did you mean `SomeEnum::B`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
